--- a/src/scss/snpt.scss
+++ b/src/scss/snpt.scss
@@ -93,7 +93,7 @@ body {
   height: 40px;
   background: #fff;
   position: absolute;
-  right: 2px;
+  right: 1em;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -104,7 +104,7 @@ body {
 
 .not-active {
   animation: slideIn .1s ease-in;
-  top: 10px;
+  top: 1em;
 }
 
 .not-inactive {
