--- a/src/scss/snpt.scss
+++ b/src/scss/snpt.scss
@@ -176,3 +176,44 @@ body {
     bottom: -40px;
   }
 }
+
+.github-corner {
+  position: absolute;
+  right: 0;
+}
+
+.github-corner:hover .octo-arm {
+  animation: octocat-wave 560ms ease-in-out
+}
+
+.github-corner-svg {
+  color: "#151513";
+  position: "absolute";
+  top: 0;
+  border: 0;
+  right: 0
+}
+
+@keyframes octocat-wave {
+  0%, 
+  100% {
+    transform: rotate(0)
+  }
+  20%, 
+  60% {
+    transform: rotate(-25deg)
+  }
+  40%, 
+  80% {
+    transform: rotate(10deg)
+  }
+}
+
+@media (max-width:500px) {
+  .github-corner:hover .octo-arm {
+    animation: none
+  }
+  .github-corner .octo-arm {
+    animation: octocat-wave 560ms ease-in-out
+  }
+}
