--- a/src/scss/snpt.scss
+++ b/src/scss/snpt.scss
@@ -48,49 +48,47 @@ body {
   display: flex;
   margin: 0;
   padding: 0;
-}
-
-.frameworks li:first-child {
-  margin-left: 0;
-}
-
-.frameworks li {
-  list-style-type: none;
-  margin-left: 1em;
-  cursor: pointer;
-  position: relative;
-}
-
-.frameworks li svg {
-  width: 25px;
-  vertical-align: middle;
-}
-
-.frameworks li svg.svg-icon-vue {
-  width: 20px;
-}
-
-.frameworks li:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: -5px;
-  left: 0;
-  background-color: #222;
-  visibility: hidden;
-  transform: scaleX(0);
-  transition: all .3s ease-in-out 0s;
-}
-
-.frameworks li:hover:before {
-  visibility: visible;
-  transform: scaleX(1);
-}
-
-.frameworks li.active:before {
-  visibility: visible;
-  transform: scaleX(1);
+  li {
+    list-style-type: none;
+    margin-left: 1em;
+    cursor: pointer;
+    position: relative;
+    &.active::before {
+      visibility: visible;
+      transform: scaleX(1);
+    }
+    &:hover::before {
+      visibility: visible;
+      transform: scaleX(1);
+    }
+    &:first-child {
+      margin-left: 0;
+    }
+    &::before {
+      background-color: #222;
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      bottom: -5px;
+      left: 0;
+      visibility: hidden;
+      transform: scaleX(0);
+      transition: all .3s ease-in-out 0s;
+    }
+    &.react::before {
+      background-color: #00b3e6;
+    }
+    &.redux::before {
+      background-color: #764abc;
+    }
+    &.vue::before {
+      background-color: #42b883;
+    }
+    &.styled-components::before {
+      background-color: #db7093;
+    }
+  }
 }
 
 .notification {
